--- a/library-self-checkout/package.json
+++ b/library-self-checkout/package.json
@@ -15,12 +15,18 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:linux": "npm run build && electron-builder --linux",
+    "server": "node server.js"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
-    "electron-updater": "^6.3.9"
+    "cors": "^2.8.5",
+    "electron-updater": "^6.3.9",
+    "express": "^5.1.0",
+    "face-api.js": "^0.22.2",
+    "tesseract.js": "5.1.1",
+    "tesseract.js-core": "5.1.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
