--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.16.0",
+    "helmet": "^8.1.0",
     "npx": "^10.2.2",
     "react-router-dom": "^7.6.2"
   }
